jd8 compatibility