@@ -45,6 +45,7 @@ import javax.ws.rs.QueryParam;
 import javax.ws.rs.core.Context;
 import javax.ws.rs.core.HttpHeaders;
 import org.apache.calcite.sql.SqlNode;
+import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.tuple.Pair;
 import org.apache.helix.model.InstanceConfig;
 import org.apache.pinot.common.Utils;
@@ -315,7 +316,7 @@ public class PinotQueryResource {
       }*/
       if (responseCode != HttpURLConnection.HTTP_OK) {
         throw new IOException("Failed : HTTP error code : " + responseCode + ". Root Cause: "
-            + new String(conn.getErrorStream().readAllBytes(), StandardCharsets.UTF_8));
+            + IOUtils.toString(conn.getErrorStream(), StandardCharsets.UTF_8));
       }
       final byte[] bytes = drain(new BufferedInputStream(conn.getInputStream()));
 
